Add findAccount() method
